Details
-
Type:
Bug
-
Status: Closed (View Workflow)
-
Priority:
Major
-
Resolution: Fixed
-
Affects Version/s: 5.5, 10.0, 10.1, 10.2, 10.3, 5.5.60, 10.4
-
Component/s: Data Manipulation - Subquery, Platform RedHat
-
Labels:
-
Environment:CentOS Linux release 7.5.1804 (Core)
Linux 3.10.0-862.11.6.el7.x86_64
MariaDB Server 5.5.60-1.el7_5
-
Epic/Theme:
Description
In regards to the attached database/table, the following query returns only 9 rows and skips values for some regions, unlike older versions of MySQL (such as 5.0.95 on CentOS 5 Linux):
SELECT region, NAME, population/area AS dichte FROM cia c WHERE
population/area = (SELECT MAX(population/area) FROM cia cc WHERE
c.region = cc.region);
This appears to be a result of precision issues with floating point values affecting value comparisons.
The following two queries which are equivalent give different result sets:
SELECT region, NAME, population/area FROM cia c WHERE population/area =
(SELECT MAX(population/area) FROM cia cc WHERE area<150000 AND c.region
= cc.region) AND AREA<150000;
SELECT region, NAME, population/area FROM cia c WHERE AREA<150000 AND
population/area = (SELECT MAX(population/area) FROM cia cc WHERE
area<150000 AND c.region = cc.region);
Attachments
Issue Links
- causes
-
MDEV-23702 calculating(auto rounding) issue
-
- Closed
-
-
MDEV-23762 Strange type-inference/rounding problem since >10.3.23
-
- Closed
-
- relates to
-
MDEV-23582 Unexpected result upon division of decimal values (comparing to other implementations)
-
- Closed
-