sql/item_func.cc
@@ -1719,6 +1719,8 @@ my_decimal *Item_func_div::decimal_op(my_decimal *decimal_value)
     null_value= 1;
     return 0;
   }
+  my_decimal_round(E_DEC_FATAL_ERROR, decimal_value,
+                   decimals, FALSE, decimal_value);
   return decimal_value;
 }
 
